cabal-version:       2.4

author:              Tom Harding
category:            Control
license-file:        LICENSE
license:             ISC
maintainer:          tomjharding@live.co.uk
name:                dagless
version:             0.1.0.0

library
  build-depends:    base
                  , indexed
                  , indexed-extras
                  , template-haskell
  default-language: Haskell2010
  exposed-modules:  Dagless
                  , Dagless.Types
                  , Data.HDagF
                  , Data.HList
                  , Data.HListF
                  , Data.Tuple.Morph
                  , Data.Tuple.Morph.TH
  hs-source-dirs:   src

test-suite tests
  build-depends:    async
                  , base
                  , dagless
                  , doctest
                  , do-notation
                  , hspec
                  , indexed
                  , indexed-extras
                  , QuickCheck
                  , random
  main-is:          Main.hs
  other-modules:    Test.Async
                  , Test.Energy
  hs-source-dirs:   test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
